<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HMI" Id="{7b02ce41-5cf5-4e76-a807-2a094223ab45}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
(*TANK*)
	rTankMaxCapacity				: REAL;
	rTankCurrentLevel				: REAL;
	bButtonResetSimilation			: BOOL;

(*PUMP*)
	bLampPumpIsOn					: BOOL;
	rPumpActualFlowRate				: REAL;
	rPumpNewFlowRate				: REAL;
	bButtonActualizePumpFlowRate	: BOOL;
	
(*DRAIN VALVE*)
	bLampDrainValveIsOn				: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>